--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,57 @@
-Pillow~=9.4.0
-pytesseract~=0.3.10
-pandas~=1.5.3
-numpy~=1.24.2
-Unidecode~=1.3.6
-opencv-python~=4.5.4.60
-fastapi~=0.89.1
-fitz~=0.0.1.dev2
-pydantic~=1.10.5
-uvicorn~=0.20.0
-pypdf2~=3.0.1
+anyio==3.6.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+ci-info==0.3.0
+click==8.1.3
+colorama==0.4.6
+configobj==5.0.8
+configparser==5.3.0
+etelemetry==0.3.0
+fastapi==0.89.1
+filelock==3.9.0
+fitz==0.0.1.dev2
+future==0.18.3
+h11==0.14.0
+httplib2==0.21.0
+httptools==0.5.0
+idna==3.4
+isodate==0.6.1
+looseversion==1.1.2
+lxml==4.9.2
+networkx==3.0
+nibabel==5.0.1
+nipype==1.8.5
+numpy==1.24.2
+opencv-python==4.5.4.60
+packaging==23.0
+pandas==1.5.3
+pathlib==1.0.1
+Pillow==9.4.0
+prov==2.0.0
+pydantic==1.10.5
+pydot==1.4.2
+PyMuPDF==1.21.1
+pyparsing==3.0.9
+pypdf==3.5.1
+PyPDF2==3.0.1
+pytesseract==0.3.10
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
+pytz==2022.7.1
+pyxnat==1.5
+PyYAML==6.0
+rdflib==6.2.0
+requests==2.28.2
+scipy==1.10.1
+simplejson==3.18.3
+six==1.16.0
+sniffio==1.3.0
+starlette==0.22.0
+traits==6.3.2
+typing_extensions==4.5.0
+Unidecode==1.3.6
+urllib3==1.26.14
+uvicorn==0.20.0
+watchfiles==0.18.1
+websockets==10.4
